--- a/step-02/journal/public/index.html
+++ b/step-02/journal/public/index.html
@@ -37,4 +37,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script type="text/javascript" src="cordova.js"></script>
 </html>
